scripts/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686  # UI
            - containerPort: 14268  # Collector
            - containerPort: 14250  # GRPC
            - containerPort: 9411   # Zipkin
      nodeSelector:
        nodeName: jump-server
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: logging
spec:
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: collector
      port: 14268
      targetPort: 14268
    - name: grpc
      port: 14250
      targetPort: 14250
    - name: zipkin
      port: 9411
      targetPort: 9411
  selector:
    app: jaeger
  type: ClusterIP
