scripts/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2.7
        ports:
        - containerPort: 5000
      nodeSelector:
        nodeName: jump-server
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: infra
spec:
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32000
  selector:
    app: registry
  type: NodePort
