scripts/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: argocd-ingress
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.aleksvagapitov.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.aleksvagapitov.com
    secretName: argocd-aleksvagapitov-com-tls
