scripts/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: grafana-ingress
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.aleksvagapitov.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.aleksvagapitov.com
    secretName: grafana-aleksvagapitov-com-tls
